# django-generic-serializer

./: .gitignore  Pipfile  README.md  requirements.txt  setup.cfg
generic_serializer/: SerializableModel.py  SerializableModelFilter.py  __init__.py  serializable_model.py  serializable_model_filter.py
test_app/: json_utils.py  models.py
test_app/migrations/: 0001_initial.py  0002_dataprovider_endpoint_httpconfig_oauthconfig.py
test_app/models/: ApiTypes.py  DataProvider.py  Endpoint.py  HttpConfig.py  OauthConfig.py  RequestType.py  __init__.py
test_app/serializers/: DataProviderSerializer.py  EndpointSerializer.py  HttpConfigSerializer.py  OauthConfigSerializer.py
test_project/: settings.py
tests/: mock_data_provider.py  test_dataProviderSerializer.py  test_httpConfigSerializer.py  test_serializableModel_build_serializer.py  test_serializableModel_deserialize.py  test_serializableModel_serialize.py  test_serializable_model.py
